--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -92,7 +92,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kfit/4fc9ac02-0470-498f-a291-b908d03d60e6'>Fave - Site Reliability Engineer (Infrastructure)</a></h5> 
+<h5><a href='https://jobs.lever.co/kfit/4fc9ac02-0470-498f-a291-b908d03d60e6'>Fave - Site Reliability Engineer (Infrastructure)</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -104,7 +104,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4367951002'>Job Application for Site Reliability Engineer at Punchh</a></h5> 
+<h5><a href='https://boards.greenhouse.io/punchh/jobs/4367951002'>Job Application for Site Reliability Engineer at Punchh</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -235,7 +235,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4361604002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4361604002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -252,7 +252,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p>3 days ago ... Site Reliability Engineer. San Francisco, CA. Engineering ? SRE. Full-time. Apply 
 for this job. Quizlet's mission is to help students (and their teachers) practice?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691989279-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691989279-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -289,7 +289,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999691873249-site-reliability-engineer'>SmartRecruiters Inc Site Reliability Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999691873249-site-reliability-engineer'>SmartRecruiters Inc Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -301,7 +301,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/blameless/2c3e30e3-8e9b-4c5a-af48-ef7c927b5e93'>Blameless - Senior Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/blameless/2c3e30e3-8e9b-4c5a-af48-ef7c927b5e93'>Blameless - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -313,7 +313,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/ozGX9fw5'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/griddynamics/job/ozGX9fw5'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -446,7 +446,7 @@ Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Salem</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<h5><a href='https://careers-discovery.icims.com/jobs/22214/site-reliability-engineer/job'>Site Reliability Engineer in Sterling, Virginia | Careers at US-VA ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-discovery.icims.com/jobs/22214/site-reliability-engineer/job'>Site Reliability Engineer in Sterling, Virginia | Careers at US-VA ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 2, 2019 ... The ideal candidate will be passionate about a data and metrics-driven 
 operations role that involves work across multiple IT and broadcast technologies 
