--- a/ux.html
+++ b/ux.html
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light">Tokyo Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351621-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351621-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/efront/41b6338e-ed98-4753-9e76-ad8f288eb953'>eFront - UX Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/efront/41b6338e-ed98-4753-9e76-ad8f288eb953'>eFront - UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://gowago.join.com/jobs/257214-ux-researcher-designer'>Job @ GOWAGO (Z?rich): UX Researcher/Designer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gowago.join.com/jobs/257214-ux-researcher-designer'>Job @ GOWAGO (Z?rich): UX Researcher/Designer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... GOWAGO AG has a job opening for UX Researcher/Designer in Z?rich (
 published: 16.07.2019). Apply now or check the other available jobs.</p>
@@ -146,7 +146,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/brandwatch/job/o33DafwD'>Brandwatch Careers - Product/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/brandwatch/job/o33DafwD'>Brandwatch Careers - Product/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -210,7 +210,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/5844df51-76a5-4831-b695-4ae808930cfa'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/5844df51-76a5-4831-b695-4ae808930cfa'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -244,7 +244,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://medici-living.join.com/jobs/266020-ux-ui-designer-m-f-d'>Job @ Medici Living Digital Services (Berlin): UX/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medici-living.join.com/jobs/266020-ux-ui-designer-m-f-d'>Job @ Medici Living Digital Services (Berlin): UX/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -276,7 +276,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://skylight.workable.com/j/03758ED8E6'>Skylight - Jobs: UX Designer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skylight.workable.com/j/03758ED8E6'>Skylight - Jobs: UX Designer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -298,7 +298,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -306,7 +306,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/leaseweb/jobs/1787123'>Job Application for UI/UX Designer at LeaseWeb</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/leaseweb/jobs/1787123'>Job Application for UI/UX Designer at LeaseWeb</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -348,7 +348,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/270BD644A7'>CCRi - Jobs: Frontend Software Engineer - UI/UX Development and ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/270BD644A7'>CCRi - Jobs: Frontend Software Engineer - UI/UX Development and ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Are interested in data mining, analytics, and/or machine learning. We're looking 
 for candidates with solid technical foundations and a desire to continue learning.</p>
@@ -375,7 +375,7 @@ for candidates with solid technical foundations and a desire to continue learnin
 VERTRIEBSSPEZIALIST (M/W) in N?rnberg (published: 28.09.2018). Apply now 
 or check?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sukUBhw5&__jvsc=Twitter&bid=nq6QPKwq&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sukUBhw5&__jvsc=Twitter&bid=nq6QPKwq&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
